--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Exploration</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    
+    <h1>Space Exploration</h1>
+    <button>Click Me</button>
 </body>
 </html>
