--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css"/>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Space Exploration</title>
-    <link rel="stylesheet" href="style.css"/>
+    
+    <title>Space Exploration</title>  
 </head>
+
 <body>
     <h1>Space Exploration</h1>
-    <button>Click Me</button>
+    <button class="btnClick">Click Me</button>
 </body>
+
 </html>
