Added logo and heading underline

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 </head>
 
 <body>
-    <h1>Space Exploration</h1>
-    <button class="btnClick">Click Me</button>
+    <img src="Images/logo.png" id="logo">
+    <h1>Space <span class="underline">Exploration</span></h1>
+    <button class="btn">Click Me</button>
+    <button class="btn">Click Me Too</button>
 </body>
 
 </html>
