Added WEBP background and improved text styling

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
     <img src="Images/logo.png" id="logo">
-    <h1>Space <span class="underline">Exploration</span></h1>
-    <button class="btn">Click Me</button>
-    <button class="btn">Click Me Too</button>
+    <h1>JOIN THE <span class="underline">EXPLORATION</span></h1>
+    <button class="btn">SIGN UP</button>
+    <button class="btn">LOGIN</button>
 </body>
 
 </html>
