Added commenting and final touches

--- a/index.html
+++ b/index.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- linking the fonts and stylesheet -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css"/>
 
+    <!-- meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <!-- creating the browser/site title -->
     <title>Space Exploration</title>  
 </head>
 
 <body>
-    <img src="Images/logo.png" id="logo">
-    <h1>JOIN THE <span class="underline">EXPLORATION</span></h1>
-    <button class="btn">SIGN UP</button>
-    <button class="btn">LOGIN</button>
-</body>
+    <div id="hero">
+        <!-- inserting the logo -->
+        <img src="Images/logo.png" id="logo">
 
+        <!-- creating the page title/heading and underlining the key word "Exploration" -->
+        <h1 id="heading">JOIN THE <span class="underline">EXPLORATION</span></h1>
+
+        <!-- sign up and login buttons -->
+        <button class="btn">SIGN UP</button>
+        <button class="btn">LOGIN</button>
+    </div>
+
+    <footer>
+        <!-- T&Cs footer text -->
+        <h2 class="tnc">TERMS AND CONDITIONS APPLY</h2>
+    </footer> 
+</body>
 </html>
